# iname

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
iname/: __init__.py  cli.py  rename.py
tests/: test_cli.py  test_rename.py
